--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,7 @@
     background-color: navy;
     color: oldlace;
     height: 100px;
-    width: 100%;
+    width: auto;
     text-align: center;
     font-size: 40px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -16,17 +16,19 @@
     align-items: center;
 }
 
+
 .main{
     background-color: steelblue;
     color: oldlace;
     height: 600px;
-    width: 100%;
+    width: auto;
     text-align: center;
     font-size: 30px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
+    width: fit-content;
 }
 
 .footer{
@@ -40,4 +42,23 @@
         display: flex;
         justify-content: center;
         align-items: center;
+}
+
+.contact-list{
+    margin: auto;
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items:flex-start;
+    padding: 20px;
+    width: fit-content;
+}
+.contact-card{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 20px 20px 0 0;
+    font-size: 20px;
+    box-sizing: content-box;
 }
