--- a/public/style.css
+++ b/public/style.css
@@ -48,7 +48,6 @@
     margin: auto;
     width: 40%;
     display: flex;
-    flex-direction: column;
     flex-wrap: wrap;
     align-items:flex-start;
     padding: 20px;
@@ -60,5 +59,7 @@
     align-items: center;
     padding: 20px 20px 0 0;
     font-size: 20px;
-    box-sizing: content-box;
+}
+.contact-card :nth-child(n){
+    padding: 10px;
 }
