--- a/public/style.css
+++ b/public/style.css
@@ -34,7 +34,7 @@
 .footer{
         background-color: lightskyblue;
         color: oldlace;
-        height: 50px;
+        height: fit-content;
         width: 100%;
         text-align: center;
         font-size: 20px;
